added resume builder and static,templates , if caused error retrack

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -129,6 +129,9 @@
                         {% endif %}
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'create_resume' %}">Resume Builder</a>
+                </li>
                 {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'profile' %}">Profile</a>
